# mandelbrot-sandbox

./: .gitignore  0.bootstrap.js  1.bootstrap.js  1.bootstrap.js.map  2.bootstrap.js  2.bootstrap.js.map  3.bootstrap.js  3.bootstrap.js.map  CNAME  Cargo.toml  README.md  bootstrap.js  bootstrap.js.map  deploy.sh  index.html  justfile  styles.css  styles.css.map
pkg/: mandelbrot_sandbox.d.ts  mandelbrot_sandbox.js  mandelbrot_sandbox_bg.js  mandelbrot_sandbox_bg.wasm  mandelbrot_sandbox_bg.wasm.d.ts  package.json
src/: lib.rs  main.rs
www/: package.json  tailwind.config.js  tsconfig.json  webpack.config.js
www/src/: MandelbrotRenderer.tsx  bootstrap.js  index.html  index.tsx  utils.ts
