[package]
name = "mandelbrot-sandbox"
description = "A Mandelbrot fractal generator that compiles to web assembly and can be visualized in the browser"
repository = "https://github.com/zequez/mandelbrot-sandbox"
version = "0.1.0"
authors = ["Ezequiel Schwartzman <zequez@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
terminal_size = "0.1.13"
js-sys = "0.3.45"
wasm-bindgen = "0.2.68"
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
